# hector_modified

./: Readme.md
Hector_ROS_Simulation/hector_control/: CMakeLists.txt  package.xml
Hector_ROS_Simulation/hector_control/ConvexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.cpp  convexMPC_interface.h  hector.urdf
Hector_ROS_Simulation/hector_control/cmake/: pinocchio_config.cmake
Hector_ROS_Simulation/hector_control/include/FSM/: FSM.h
Hector_ROS_Simulation/hector_control/include/common/: ControlFSMData.h  DesiredCommand.h  LowLevelController.h  cppTypes.h
Hector_ROS_Simulation/hector_control/include/interface/: rt_rc_interface.h
Hector_ROS_Simulation/hector_control/src/: main.cpp
Hector_ROS_Simulation/hector_control/src/FSM/: FSM.cpp  FSMState_Walking.cpp
Hector_ROS_Simulation/hector_control/src/common/: LowLevelController.cpp
Hector_ROS_Simulation/hector_control/src/interface/: rt_rc_interface.cpp
Hector_ROS_Simulation/hector_description/launch/: check_joint.rviz  default.rviz  display.launch  hector_rviz.launch
Hector_ROS_Simulation/hector_description/urdf/: hector.urdf  hector2.urdf  hector_use_for_generate_jacobian.urdf
Hector_ROS_Simulation/hector_description/xacro/: arm_transmission.xacro  const.xacro  hector_description.gv  leg.xacro  robot.xacro  robotwithoutarm.xacro
Hector_ROS_Simulation/unitree_ros/: README.md
Hector_ROS_Simulation/unitree_ros/unitree_legged_control/: CMakeLists.txt
Hector_ROS_Simulation/unitree_ros/unitree_legged_control/include/: unitree_joint_control_tool.h
Hector_ROS_Simulation/unitree_ros/unitree_legged_control/src/: unitree_joint_control_tool.cpp
